# cmip7-scenariomip-ghg-concentrations

./: .copier-answers.yml  .gitignore  NOTES.md  README.md  pyproject.toml
changelog/: 1.feature.md  5.improvement.md  6.docs.md  6.fix.md  6.improvement.md  6.trivial.md  README.md
data/raw/wmo-2022/: MixingRatiosCMIP7_20250210.xlsx
notebooks/: 0001_create-wmo-based-annual-mean-file.py  0001_extend-western-et-al-2024-with-wmo-2022.py  0001_extend-western-et-al-2024.py  0010_create-single-concentration-projection-annual-mean-file.py  0020_create-complete-emission-scenario.py  0021_run-magicc.py  0030_create-projection-one-box-model.py  0031_create-projection-gradient-aware-harmonisation.py  1000_interpolate-annual-mean-to-monthly.py  1010_scale-seasonality-based-on-annual-mean.py  1011_scale-seasonality-based-on-magicc-npp.py  1020_calculate-inverse-emissions.py  1030_scale-latitudinal-gradient-based-on-emissions.py  1031_scale-latitudinal-gradient-eofs.py  1100_create-esgf-files.py  1101_create-esgf-files-equivalent-species.py  1200_run-magicc-concentration-driven.py  2000_plot-marker-overview.py  scratch-one-box-gases.py
scripts/: create-latest-set-of-concentration-files.sh  generate-concentration-files.py  upload-to-llnl.py
src/cmip7_scenariomip_ghg_generation/: __init__.py  constants.py  input4mips_cvs_helpers.py  main_flow.py  notebook_running.py  parallelisation.py  prefect_helpers.py  scenario_info.py  singe_concentration_projection_flow.py  single_concentration_projection_flow.py  wmo_2022_flow.py  xarray_helpers.py
src/cmip7_scenariomip_ghg_generation/mean_preserving_interpolation/: __init__.py  annual_to_monthly.py  boundary_handling.py  core.py  grouping.py  lai_kaplan.py  rymes_meyers.py
src/cmip7_scenariomip_ghg_generation/prefect_tasks/: __init__.py  annual_mean_to_monthly.py  cmip7_historical_ghgs.py  create_esgf_files.py  download_file.py  extract_fossil_biosphere_timeseries.py  extract_specific_variable.py  extract_tar.py  extraction.py  gradient_aware_harmonisation_projection.py  inverse_emissions.py  magicc_handling.py  make_complete_scenarios.py  one_box_projection.py  plotting.py  scale_latitudinal_gradient_with_emissions.py  scale_seasonality.py  scale_seasonality_with_annual_mean.py  scm_running.py  single_concentration_projection.py  split_input_emissions.py  unzip_file.py  western_et_al_2024.py  wmo_2022.py  zenodo.py
