[project]
authors = [
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-resource.com"},
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pre-commit>=3.3.1",
    "jupyterlab>=4.0.0",
    "jupytext>=1.15.2",
    "openpyxl>=3.1.5,<4",
    "pandas>=2.2.3,<3.0",
    "prefect>=3.4.3,<4",
    "typer>=0.15.4,<0.16", "pyarrow>=20.0.0,<21",
]
name = "cmip7_scenariomip_ghg_generation"
version = "0.1.0"
description = "Generation of GHG concentration inputs (i.e. forcings) for CMIP7's ScenarioMIP."
readme = "README.md"

[tool.pixi.project]
channels = [
    "conda-forge",
]
platforms = [
    "osx-64",
    "osx-arm64",
    "linux-64",
    "linux-aarch64",
    "win-64",
]

[tool.pixi.tasks]

[tool.pixi.dependencies]

[tool.pixi.pypi-dependencies]
cmip7_scenariomip_ghg_generation = { path = ".", editable = true }

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [ ]
ignore = [
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
